# django-react-calendar

./: .gitignore  README.md  makefile
backend/: .gitignore  pyproject.toml
backend/core/: settings.py  urls.py  utility.py
backend/general/: serializers.py  urls.py  views.py
backend/social/: views.py
frontend/: bun.lockb  index.html  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx  routes.jsx
frontend/src/components/Calendar/: calendar.jsx
frontend/src/components/Layout/: AppLayout.jsx
frontend/src/components/ThemeToggle/: themeToggle.jsx
frontend/src/config/: theme.json
frontend/src/context/: ThemeContext.jsx
frontend/src/pages/Calendar/: Calendar.Page.jsx
frontend/src/pages/Home/: Home.Page.jsx
frontend/src/pages/NotFound/: NotFound.Page.jsx
frontend/src/redux-store/: store.js
frontend/src/redux-store/slices/general/: auth.slice.js  general.slice.js
